--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,22 @@ certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
 fix-yahoo-finance==0.0.22
-idna==2.7
+idna==2.8
 kiwisolver==1.0.1
-lxml==4.2.5
 matplotlib==3.0.2
 multitasking==0.0.7
-numpy==1.15.4
-pandas==0.23.4
-pandas-datareader==0.7.0
+numpy==1.16.1
+pandas==0.24.0
 patsy==0.5.1
-pyparsing==2.3.0
+pkg-resources==0.0.0
+pyparsing==2.3.1
 python-dateutil==2.7.5
-pytz==2018.7
-requests==2.20.1
-scipy==1.1.0
+pytz==2018.9
+requests==2.21.0
+scikit-learn==0.20.2
+scipy==1.2.0
 simplejson==3.16.0
 six==1.12.0
 statsmodels==0.9.0
 urllib3==1.24.1
-wrapt==1.10.11
-xkcd==2.4.2
 yahoo-finance==1.4.0
